Initial commit: Longevity content bot with multi-platform, blocklist, dry-run

--- a/.env
+++ b/.env
@@ -36,3 +36,6 @@ POST_MODE=auto  # auto/news/reddit
 # Domain/Keyword blocklist
 BLOCKLIST_DOMAINS=example.com,spammyhealth.com
 BLOCKLIST_KEYWORDS=miracle cure,instant longevity,secret formula
+
+# Dry-run mode
+DRY_RUN=true  # set to true to skip actual posting and only simulate content processing
