--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+# HTTP requests
+requests>=2.31.0
 requests==2.32.3
-praw==7.7.1
-tweepy==4.14.0
+praw==7.8.1
+# Twitter/X API
+Tweepy>=4.14.0
 Pillow==10.4.0
 APScheduler==3.10.4
 pytz==2024.1
 python-dotenv==1.0.1
+# Bluesky API
+atproto>=0.0.61
