--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+# Requirements.txt
+
 # HTTP requests
-requests>=2.31.0
 requests==2.32.3
 praw==7.8.1
 # Twitter/X API
-Tweepy>=4.14.0
+tweepy==4.14.0
 Pillow==10.4.0
 APScheduler==3.10.4
 pytz==2024.1
