Updated Bot files

--- a/.env
+++ b/.env
@@ -1,4 +1,13 @@
-# Environment Variables
+#.env
+#Environment Variables
+
+# Dry-run mode
+DRY_RUN=true  # set to true to skip actual posting and only simulate content processing
+
+# Daily posting schedule
+POST_TIME=09:00
+TIMEZONE=Australia/Brisbane
+POST_MODE=auto  # auto/news/reddit
 
 # Reddit API Credentials
 REDDIT_CLIENT_ID=your_reddit_client_id
@@ -24,18 +33,12 @@ FACEBOOK_PAGE_ID=your_facebook_page_id
 
 # Bluesky API Credentials (hypothetical example)
 BLUESKY_ACCESS_TOKEN=your_bluesky_access_token
+BLUESKY_HANDLE=your_bluesky_username
+BLUESKY_PASSWORD=your_bluesky_password
 
 # Unsplash API for fallback images
 UNSPLASH_ACCESS_KEY=your_unsplash_access_key
 
-# Daily posting schedule
-POST_TIME=09:00
-TIMEZONE=Australia/Brisbane
-POST_MODE=auto  # auto/news/reddit
-
 # Domain/Keyword blocklist
 BLOCKLIST_DOMAINS=example.com,spammyhealth.com
 BLOCKLIST_KEYWORDS=miracle cure,instant longevity,secret formula
-
-# Dry-run mode
-DRY_RUN=true  # set to true to skip actual posting and only simulate content processing
